<resources>
    <string name="app_name">Oreo</string>
    <string name="action_settings">Settings</string>

    <string name="channel_low_id">channel_low</string>
    <string name="channel_low_title">Low</string>
    <string name="channel_low_description">Low</string>

    <string name="channel_high_id">channel_high</string>
    <string name="channel_high_title">High</string>
    <string name="channel_high_description">High</string>

    <string name="title_activity_pip">Picture In Picture</string>
    <string name="title_activity_notification">Notification Channel</string>
    <string name="title_activity_pin">Pinning Shortcuts</string>
    <string name="title_activity_animation">Physics-based Animations</string>

    <string name="notification_button_title">Notification</string>
    <string name="pip_button_title">Picture In Picture</string>
    <string name="font_button_title">Fonts in XML</string>
    <string name="pin_button_title">Pinning Shortcuts</string>
    <string name="animation_button_title">Physics-based Animations</string>

    <string name="pip_start_button_title">Start</string>
    <string name="pip_stop_button_title">Stop</string>

    <string name="notification_title_title">Title</string>
    <string name="notification_description_title">Description</string>
    <string name="notification_send_button_title">Send</string>
    <string name="title_activity_font">Fonts in XML</string>

    <string name="abril_fatface">Abril Fatface</string>
    <string name="dancing_script">Dancing Script</string>
    <string name="orbitronTextView">Orbitron</string>
    <string name="poiret_one">Poiret One</string>
    <string name="shadow_into_light">Shadow Into Light</string>

    <string name="pin_label_label">Label</string>
    <string name="pin_name_label">Your name</string>

    <string name="pin_name_format_text">Hello %1$s!</string>
</resources>
