<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jp.cordea.oreo.NotificationActivity"
    tools:showIn="@layout/activity_notification">

    <Spinner
        android:id="@+id/spinner"
        android:layout_marginBottom="@dimen/notification_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:hint="@string/notification_title_title"
        android:layout_marginBottom="@dimen/notification_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:hint="@string/notification_description_title"
        android:layout_marginBottom="@dimen/notification_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send_button"
        android:text="@string/notification_send_button_title"
        android:layout_margin="@dimen/notification_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
